# portage-atom

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: parse_atoms.rs  parse_dep_string.rs
src/: cpn.rs  cpv.rs  dep.rs  dep_entry.rs  error.rs  lib.rs  parsers.rs  slot.rs  use_dep.rs  version.rs
