[package]
name = "portage-atom"
version = "0.1.2"
edition = "2021"
rust-version = "1.71.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Lightweight Portage package atom parser based on PMS"
repository = "https://github.com/lu-zero/portage-atom"
keywords = ["gentoo", "portage", "parser", "pms"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
winnow = "0.7"
thiserror = "2"

[[example]]
name = "parse_atoms"
path = "examples/parse_atoms.rs"

[[example]]
name = "parse_dep_string"
path = "examples/parse_dep_string.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
