[package]
name = "portage-atom"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Lightweight Portage package atom parser based on PMS"
repository = "https://github.com/lu-zero/portage-atom"
keywords = ["gentoo", "portage", "parser", "pms"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
gentoo-interner = "0.1.2"
winnow = "0.7"
thiserror = "2"

[[example]]
name = "parse_atoms"
path = "examples/parse_atoms.rs"

[[example]]
name = "parse_dep_string"
path = "examples/parse_dep_string.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parsing"
harness = false
